--- a/Week2/index.html
+++ b/Week2/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html>
 
 <head>
-  <meta charset='UTF-8'>
-  <title>Docker Static HTML Deployment</title>
-
-  <link rel="stylesheet" href="styles.css">
+<meta charset="utf-8">
+<title>DISTRIBUTED CLOUD COMUTING GROUP-8</title>
 </head>
+<body style="background-color:yellow;">
 
-<body>
-  <div class="container">
-    <h1>Hey there</h1>
-  </div>
+
+<h1 style="color:red;"><U>Welcome to our first deployment!</U></h1>
+
+<b>
+<p>hello welcome to our page </p>
+<p>this is our assignment for week-2</P>
+<img src="https://hmp.me/cp9t"   >
+</b>
 </body>
-
 </html>
